--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"devDependencies": {
 		"grunt": "~0.4.1",
+		"connect": "~2.7.11",
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-watch": "~0.4.4",
-		"grunt-contrib-connect": "~0.3.0"
 	}
 }
