--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-	"name": "processing-boilerplate",
-	"version": "0.0.1",
-	"private": true,
-	"devDependencies": {
-		"grunt": "~0.4.1",
-		"connect": "~2.7.11",
-		"grunt-contrib-concat": "~0.3.0",
-		"grunt-contrib-watch": "~0.4.4"
-	}
+  "name": "processing-boilerplate",
+  "version": "0.0.1",
+  "private": true,
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "connect": "~2.7.11",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-copy": "~0.4.1"
+  }
 }
