--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "processing-boilerplate",
+  "description" : "processing.js ftw",
   "version": "0.0.1",
   "private": true,
+  "width": 640,
+  "height": 480,
   "devDependencies": {
     "grunt": "~0.4.1",
     "connect": "~2.7.11",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-templater": "0.0.4-1",
+    "mustache": "~0.7.2"
   }
 }
