mention ul in sketch folder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "processing-boilerplate",
-  "description": "processing.js ftw",
-  "author": "Frederik Ring",
+  "description": "Develop Processing Applications in any editor without having to use the Processing IDE",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
